tests/paczka2/big_fuzzy/74913184.err
Error in line 5: 0wHjZS A862 77,9
Error in line 25: 0wHjZS S814 991,7
Error in line 28: opuEKlYc A504 68,6
Error in line 34: ZMTRxzrCI A504 84,2
Error in line 43: ZMTRxzrCI S729 84,2
Error in line 44: FcB A862 82,5
Error in line 64: ZMTRxzrCI A862 -2,1
Error in line 63: X2tot A504 4,2
Error in line 69: opuEKlYc A862 70,2
Error in line 61: ZMTRxzrCI A862 64,2
Error in line 76: 0wHjZS A862 61,4
Error in line 85: ZMTRxzrCI S729 254,6
Error in line 97: ZMTRxzrCI A862 63,0
Error in line 102: S729 A504 84,7
Error in line 108: hlSDhfO S7(9 (0,(
Error in line 106: hlSDhfO A862 99,7
Error in line 105: 0wHjZS S729 6,6
Error in line 107: S729 S729 19,0
Error in line 109: hlSDhfO S729 18,4
Error in line 112: opuEKlYc S729 10,1
Error in line 122: ZMTRxzrCI S814 27,2
Error in line 113: 0wHjZS A504 93,3
Error in line 124: ZMTRxzrCI S729 45,5
Error in line 130: ZMTRxzrCI A504 80,8
Error in line 115: S729 S814 90,3
Error in line 139: opuEKlYc A862 51,9
Error in line 151: hlSDhfO A862 88,0
Error in line 171: ZMTRxzrCI A504 35,5
Error in line 176: FcB S814 50,1
Error in line 173: ZMTRxzrCI S729 48,0
Error in line 178: hlSDhfO A504 19,4
Error in line 185: hlSDhfO A862 79,5
Error in line 181: FcB A504 76,9
Error in line 183: X2tot S814 43,7
Error in line 186: S729 A504 45,8
Error in line 196: S.29 S814 26,3
Error in line 210: hlSDhfO S814 39,0
Error in line 188: opuEKlYc A862 214,1
Error in line 222: X2tot S729 2,8
Error in line 228: X2tot A504 55,1
Error in line 231: S729 A504 20,1
Error in line 229: X2tot S814 55,0
Error in line 235: S729 A862 60,0
